# charlie-code

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile-kinetic  README.md  charlie-networking-init.sh  dependencies.rosinstall  drive.cpp  package.xml  remote-charlie.sh  setup.py
config/: my_razor.yaml
include/: imu.launch  interfacer.launch  run_all.launch
launch/: charlie.launch  gps.launch  imu.launch  interfacer.launch  move_base.launch  robot_pose_ekf.launch  rtab_map.launch  run_all.launch  zed.launch
launch/params/: costmap_common_params.yaml
nodes/: interfacer.py
params/: costmap_common_params.yaml
params/map_nav_params/: local_costmap_params.yaml
params/odom_nav_params/: global_costmap_params.yaml
src/: interfacer.py  meat.py  point_cloud_tf.h
src/interfacer_package/: interfacer.py
temp/: drive.cpp  gps_waypoints.txt  map.sh  odom_arduino.cpp  point_cloud_tf.cpp  startup.py  waypoint_generator.py
urdf/: charlie.urdf
